--- a/app/views/shared/_widget_profile_settings.html.haml
+++ b/app/views/shared/_widget_profile_settings.html.haml
@@ -4,14 +4,14 @@
       Settings
   %ul.widget_menu
     %li
-      %a{:href => '#'} Edit Profile
+      %a{:href => profile_path} Edit Profile
     %li
-      %a{:href => '#'} Change Password
+      %a{:href => password_path} Change Password
     %li
-      %a{:href => '#'} Picture
+      %a{:href => picture_path} Picture
     %li
-      %a{:href => '#'} Notifications
+      %a{:href => notifications_path} Notifications
     %li
-      %a{:href => '#'} Connections
+      %a{:href => connections_path} Connections
     %li
-      %a{:href => '#'} Devices
+      %a{:href => devices_path} Devices
