--- a/app/assets/sass/_ui_elements.sass
+++ b/app/assets/sass/_ui_elements.sass
@@ -185,6 +185,35 @@
   color: #fff
   text-shadow: #000 0 -1px 0
 
+//
+// Clear selected verses button.
+//
+
+#clear_selected_verses
+  +border-right-radius(0)
+  float: left
+
+#clear_selected_verses + .button
+  +border-left-radius(0)
+  border-left: 0
+  float: left
+
+#clear_selected_verses + .button:after
+  content: ''
+  background: #fff
+  color: transparent
+  font-size: 0
+  overflow: hidden
+  width: 1px
+  position: absolute
+  top: 0
+  left: 0
+  bottom: 0
+
+#clear_selected_verses + .button:active:after,
+.li_active #clear_selected_verses + .button:after
+  background: rgba(#fff, 0.4)
+
 // `Icons
 //----------------------------------------------------------------------------------------------------
 
@@ -199,6 +228,10 @@
 .icon_parallel
   background:
     image: url(../images/icon_parallel.png)
+    position: center 3px !important
+  .parallel_mode &
+    background:
+      position: center -47px !important
 
 .icon_full_screen
   background:
