Reverse drop-down menu on X-axis, if the right edge goes beyond the bounds of the window.

--- a/app/assets/sass/_dynamic_menus.sass
+++ b/app/assets/sass/_dynamic_menus.sass
@@ -29,6 +29,10 @@
   top: -8px
   left: 10px
 
+  .dynamic_menu_reverse &
+    left: auto
+    right: 10px
+
 .dynamic_menu_inner,
 .dynamic_menu .scroll
   background: url(../images/menu_scroll.png)
