--- a/app/assets/sass/_ui_elements.sass
+++ b/app/assets/sass/_ui_elements.sass
@@ -224,6 +224,12 @@
 .icon_listen
   background:
     image: url(../images/icon_listen.png)
+    position: center 3px !important
+  &:active,
+  &:focus,
+  .li_active &
+    background:
+      position: center -47px !important
 
 .icon_parallel
   background:
