--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -29,5 +29,6 @@
       = render_cell :version_selector, :display, {reference: @reference}
       = render '/shared/menu_bookmark'
       = render '/shared/menu_settings'
+      = render '/shared/menu_audio_player'
       = render '/shared/modal_single_verse'
     = render '/shared/javascripts'
