--- a/app/views/references/show.html.haml
+++ b/app/views/references/show.html.haml
@@ -46,7 +46,7 @@
           %span.icon_settings
             =t("ref.settings")
       %li.hide_in_parallel_mode
-        %a.button{:href => '#', :title => t("ref.listen")}
+        %a.button.dynamic_menu_trigger{:href => '#menu_audio_player', :title => t("ref.listen")}
           %span.icon_listen
             =t("ref.listen")
       %li.hide_in_parallel_mode
