added profile update
Change-Id: I28982b9d10a3e7fb5cb6bd29ba04df2fb21c3298

--- a/app/assets/sass/_widgets.sass
+++ b/app/assets/sass/_widgets.sass
@@ -144,7 +144,8 @@
 .widget_menu a:hover
   color: $body_text
 
-.widget_menu a:hover
+.widget_menu a:hover,
+.widget_menu a.selected
   background:
     color: rgba(#fff, 0.4)
 
