added profile update
Change-Id: I886c520bfd19ab1dc54e4ec7dc03047e0941deb6

--- a/app/views/notes/show.html.haml
+++ b/app/views/notes/show.html.haml
@@ -11,6 +11,6 @@
       = label_tag :user_status, t("notes.status field")
       = @note.user_status
       / = button_to(@note.likes(:user_id => current_user.id).nil? ? t("likes.like button text") : t("likes.unlike button text"), like_path(@note.id), :method => :put) if @note.user_status == 'public' && current_user
-    - if current_user && (current_auth.user_id == @note.user_id.to_i)
+    - if current_auth && (current_auth.user_id.to_i == @note.user_id.to_i)
       = link_to(t("notes.edit"), edit_note_path(@note.id)) 
       = link_to(t("notes.delete"), note_path(@note.id), :confirm => t("notes.confirm delete"), :method => :delete)
