--- a/app/views/users/password.html.haml
+++ b/app/views/users/password.html.haml
@@ -5,3 +5,19 @@
 
 %article
   %h1= t('users.change my password')
+  = form_for :user, url: password_path do |f|
+    %p
+      = f.label :old_password, t('users.profile.current password')
+      %br
+      = f.password_field :old_password
+    %hr
+    %p
+      = f.label :password, t('users.profile.new password')
+      %br
+      = f.password_field :password
+    %p
+      = f.label :password_confirm, t('users.profile.confirm password')
+      %br
+      = f.password_field :password_confirm
+    %p
+      = f.submit t('users.change my password')
