plan#show and users#index for a plan

--- a/app/assets/sass/_main_reader.sass
+++ b/app/assets/sass/_main_reader.sass
@@ -394,3 +394,11 @@
   background:
     image: url(../images/big_list_badge.png)
     position: 0 19px
+  
+#main .big_list .user
+  overflow: hidden
+  img
+    float: left
+    margin-right: 10px
+  &>div
+    float: left
