--- a/app/assets/sass/_widgets.sass
+++ b/app/assets/sass/_widgets.sass
@@ -148,6 +148,11 @@
   background:
     color: rgba(#fff, 0.4)
 
+.widget_menu p
+  margin: 10px 20px 10px 20px
+  padding: 0
+  overflow: hidden
+
 // `Count
 //----------------------------------------------------------------------------------------------------
 
