everything but connections
Change-Id: Ib04714d4ec10c572f2666d81df7d5bfb16df250c

--- a/app/views/shared/_javascripts.html.haml
+++ b/app/views/shared/_javascripts.html.haml
@@ -4,7 +4,7 @@
 %script{:src => '/javascripts/rails.js'}
 %script{:src => 'http://include.reinvigorate.net/re_.js'}
 %script{:src => '/javascripts/analytics.js'}
-%script{:src => '/javascripts/uservoice.js'}
+/ %script{:src => '/javascripts/uservoice.js'}
 
 - if content_for? :javascripts
   = yield :javascripts
