--- a/app/views/users/picture.html.haml
+++ b/app/views/users/picture.html.haml
@@ -5,4 +5,17 @@
 
 %article
   %h1= t('users.picture')
+  %h3= t('users.profile.your current picture')
+  %p
+    %img{src: @user.user_avatar_url["px_128x128"]}
+  = form_for @user, url: picture_path do |f|
+    %p
+      = f.label :image, t('users.profile.avatar file')
+      %br
+      = f.file_field :image
+      %br
+      = t('users.profile.avatar help')
+    %p
+      = f.submit t('users.update my picture')
+
 
