share modal window and basic reference token css

--- a/app/assets/sass/application.sass
+++ b/app/assets/sass/application.sass
@@ -25,6 +25,7 @@
 @import sidebar
 @import footer
 @import modal_window
+@import reference_tokens
 @import full_screen
 @import parallel_mode
 @import audio_player
