--- a/app/views/shared/_modal_single_verse.html.haml
+++ b/app/views/shared/_modal_single_verse.html.haml
@@ -1,29 +1,30 @@
-#modal_overlay &nbsp;
-#modal_window
-  %header
-    %b
-      Philippians 4:13
-    %span.separator
-      |
-    The Message
-    &nbsp;
-    %small
-      %a{:href => '#'}
-        Compare All Versions
-    %a.close{:href => '#'} Close
-  %section
-    %p.big
-      Whatever I have, wherever I am, I can make it through anything in the One who makes me who I am.
-    %hr
-    %p
-      %a.action_button_green{:href => '#'} Read Philippians 4
-  %aside
-    %p.gutter_bottom_half
-      %a{:href => '#'}
-        %img{:src => './images/button_share_on_facebook.png', :alt => 'Share on Facebook'}
-    %p.gutter_bottom_half
-      %a{:href => '#'}
-        %img{:src => './images/button_share_on_twitter.png', :alt => 'Share on Twitter'}
-    %p.gutter_bottom_half
-      %a{:href => '#'}
-        %img{:src => './images/button_get_qr_code.png', :alt => 'Get QR Code'}
+#modal_single_verse
+  #modal_overlay &nbsp;
+  #modal_window
+    %header
+      %b
+        Philippians 4:13
+      %span.separator
+        |
+      The Message
+      &nbsp;
+      %small
+        %a{:href => '#'}
+          Compare All Versions
+      %a.close{:href => '#'} Close
+    %section
+      %p.big
+        Whatever I have, wherever I am, I can make it through anything in the One who makes me who I am.
+      %hr
+      %p
+        %a.action_button_green{:href => '#'} Read Philippians 4
+    %aside
+      %p.gutter_bottom_half
+        %a{:href => '#'}
+          %img{:src => './images/button_share_on_facebook.png', :alt => 'Share on Facebook'}
+      %p.gutter_bottom_half
+        %a{:href => '#'}
+          %img{:src => './images/button_share_on_twitter.png', :alt => 'Share on Twitter'}
+      %p.gutter_bottom_half
+        %a{:href => '#'}
+          %img{:src => './images/button_get_qr_code.png', :alt => 'Get QR Code'}
