--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -31,4 +31,6 @@
       = render '/shared/menu_settings'
       = render '/shared/menu_audio_player'
       = render '/shared/modal_single_verse'
+      = render '/shared/modal_share_verse'
+
     = render '/shared/javascripts'
