--- a/app/views/shared/_nav_primary.html.haml
+++ b/app/views/shared/_nav_primary.html.haml
@@ -9,7 +9,7 @@
           %a{:href => user_bookmarks_path(current_auth.user_id)}
             %span Bookmarks
       %li#nav_primary_plans
-        %a{:href => '/reading-plans'}
+        %a{:href => user_plans_path(current_auth.user_id)}
           %span=t("plans title")
       %li#nav_primary_notes{class: @nav == :notes ? "highlighted" : ""}
         %a{:href => current_auth ? user_notes_path(current_auth.user_id) : notes_path}
