Share Verse Modal 99% done. wonky radio buttons and character counters

--- a/app/assets/sass/_modal_window.sass
+++ b/app/assets/sass/_modal_window.sass
@@ -128,6 +128,7 @@
 #modal_share_verse 
 #modal_window textarea 
   width: 300px
+  height: 80px
 
 #modal_window .modal_reference_tokens
   background: #eae9ec
@@ -164,7 +165,7 @@
   float: left
   width: 140px
   +round-top
-  padding: 7px 0px
+  padding: 12px 0px
   margin: 0 10px 0 0
   font-size: 13px
 
@@ -237,3 +238,35 @@
 .action_cancel
   padding: 5px 0px 0px 0px
   margin-right: 10px
+
+.share_services span .faux_checkbox
+  float: left
+  padding-right: 5px
+
+.share_verse_twitter 
+  background: url(../images/share_twitter_logo.png)
+  text-indent: -30000px
+  width: 65px 
+  height: 13px
+  display: block
+  float: left
+  margin-top: 8px
+
+.share_verse_facebook 
+  background: url(../images/share_facebook_logo.png)
+  text-indent: -30000px
+  width: 65px 
+  height: 13px
+  display: block
+  float: left
+  margin-top: 8px
+
+.share_verse_google 
+  background: url(../images/share_google_logo.png) no-repeat
+  text-indent: -30000px
+  width: 65px 
+  height: 18px
+  display: block
+  float: left
+  margin-top: 8px
+
