fixed logic to carry along existing query params when submitting search or language filtering

--- a/app/views/plans/index.html.haml
+++ b/app/views/plans/index.html.haml
@@ -24,13 +24,19 @@
   .split_pane{:style => "padding-top:15px"}
     .plan_search
       %form{method: 'get'}
+        - if params[:category]
+          %input{:type => "hidden", :name => "category", :value => params[:category]}
+        - if params[:query]
+          %input{:type => "hidden", :name => "query", :value => params[:query]}
         %select.float_left{onChange: "this.form.submit()", style: "margin-right: 126px; margin-left:10px", name: "lang", }
           - I18n.available_locales.each do |loc|
             %option{value: loc.to_s, selected: loc.to_s == params[:lang]}= t("language name", locale: loc)
             -#TODO: Get this submitting on select
       %form{method: 'get'}
-        - if @categories.current
-          %input{:type => "hidden", :name => "category", :value => @categories.current_slug}
+        - if params[:category]
+          %input{:type => "hidden", :name => "category", :value => params[:category]}
+        - if params[:lang]
+          %input{:type => "hidden", :name => "lang", :value => params[:lang]}
         %input{:style =>"width: 300px; margin-left: 40px;", name: "query", :type => 'search', :placeholder => t("plans.search placeholder", category: @categories.current_name || t("plans.all"))}
         %input{:type => 'submit', :value => t("plans.search")}
       %hr{:style => "margin-top:15px"}
@@ -39,18 +45,18 @@
         %dt
           Browse by Category
         %dd{class: (params[:category] == "" || params[:category].nil?) ? "highlighted" : ""}
-          = link_to t("plans.all plans"), plans_path
+          = link_to t("plans.all plans"), plans_path(lang: params[:lang])
         - level = 0
         - if @categories
           - @categories.breadcrumbs.each do |category|
             - level += 1
             %dd{class: params[:category] == category.slug ? "highlighted" : ""}
-              %a{:href => plans_path(category: category.slug), :style => "margin-left:#{level * 20}px"}
+              %a{:href => plans_path(category: category.slug, lang: params[:lang]), :style => "margin-left:#{level * 20}px"}
                 = (params[:category] == category.slug) ? t("plans.all category plans", category: category.name)  : category.name
           - level += 1
           - @categories.items.each do |category|
             %dd{class: params[:category] == category.slug ? "highlighted" : ""}
-              %a{:href => plans_path(category: category.slug), :style => "margin-left:#{level * 20}px"}
+              %a{:href => plans_path(category: category.slug, lang: params[:lang]), :style => "margin-left:#{level * 20}px"}
                 = category.name
     .split_pane_content
       - if !@plans.empty?
