--- a/app/views/shared/_modal_share_verse.html.haml
+++ b/app/views/shared/_modal_share_verse.html.haml
@@ -8,7 +8,7 @@
     %section.modal_reference_tokens
       %b
         Currently Selected:
-      %ul
+      %ul.reference_tokens
         %li
           %a{:href => "#"}
             Luke 2:14
