--- a/app/assets/sass/_reference_tokens.sass
+++ b/app/assets/sass/_reference_tokens.sass
@@ -29,3 +29,37 @@
 		repeat: no-repeat
 		position: right -23px, center center
 		size: auto
+
+.reference_tokens
+	border: none !important
+	background: transparent
+	background-image: none !important
+	box-shadow: 0px 0px 0px transparent !important
+.reference_tokens li
+	float: left
+	list-style: none
+	margin: 
+		right: 10px
+		left: 0px
+	padding: 0px
+	border: none !important
+	a 
+		display: block
+		padding: 2px 29px 2px 10px
+		font-weight: bold
+		text-shadow: 0px 1px 0px rgba(#000, .6)
+		font-size: 11px
+		color: white
+		+background-image(url(../images/close_reference_token.png), linear-gradient(#0093d0, #0072bc))
+		background:
+			repeat: no-repeat
+			position: right 5px, center center
+			size: auto
+		border-radius: 15px
+		text-decoration: none
+.reference_tokens ul li a:hover
+	+background-image(url(../images/close_reference_token.png), linear-gradient(#007cad, #00588f))
+	background:
+		repeat: no-repeat
+		position: right -23px, center center
+		size: auto
