--- a/app/assets/sass/_widgets.sass
+++ b/app/assets/sass/_widgets.sass
@@ -260,6 +260,25 @@ a.more_arrow:hover
   background: url(../images/more_arrow.png) no-repeat right center
   padding: 5px 25px 5px 0
 
+
+// Parallel Notes Sidebar
+//------------------------------------------------------------------------------------------
+
+.parallel_notes section
+  padding: 10px 5px 5px 5px
+  background-image: url(../images/shadow.png) repeat-x !important
+.parallel_notes input[type="text"]
+  height: 25px
+  margin: 0px 0px 10px 0px
+  width: 100%
+.parallel_notes textarea 
+  height: 200px
+.parallel_notes select
+  width: 100%
+  margin: 10px 0
+
+
+
 // `Fixed Widget Header
 //----------------------------------------------------------------------------------------------------
 
