--- a/app/views/references/show.html.haml
+++ b/app/views/references/show.html.haml
@@ -26,7 +26,7 @@
         %a#clear_selected_verses.button{:href => '#', :title => 'Clear Selected Verses'}
           %span.icon_x
             Clear Selected Verses
-        %a#verses_selected_button.dynamic_menu_trigger.button{:href => '#share_modal_window', :title => t("ref.share")}
+        %a#verses_selected_button.dynamic_menu_trigger.button{:href => '#menu_bookmark', :title => t("ref.share")}
           %b.icon_share
             =t("ref.selected")
             %sup#verses_selected_count
