--- a/app/views/plans/show.html.haml
+++ b/app/views/plans/show.html.haml
@@ -1,6 +1,7 @@
 - @title = @plan.name
 
 - content_for :sidebar do
+  = button_to(t('plans.subscribe to plan'), plan_start_path(@plan), :class => 'action_button_green')
   .widget
     %header
       %span
