--- a/app/views/users/connections.html.haml
+++ b/app/views/users/connections.html.haml
@@ -5,3 +5,8 @@
 
 %article
   %h1= t('users.connected accounts')
+  %p Connect to:
+  %ul
+    %li= link_to "Twitter", new_connection_path("twitter", redirect: connections_path(show: "twitter"))
+    %li= link_to "Facebook", new_connection_path("facebook", redirect: connections_path(show: "facebook"))
+
